Bug 787416 - Invalidate tiled layers when the format changes. r=joe